--- a/bin/projects/Flooding/Flooding.config
+++ b/bin/projects/Flooding/Flooding.config
@@ -6,10 +6,11 @@ number_of_threads = 8
 
 log = true
 debug = false
-
+seed_random = 1587632589
 message_transmission_model = DefaultMessageTransmissionModel
 
 nodes[0] = 1000
+
 
 distribuition_model[0] = RandomDistribution
 communication_radio[0] = 300
