--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,13 @@
 *.txt
 *.iml
 *.xml
+*.jar.*
+*.war.*
+*.ear.*
+*.txt.*
+*.iml.*
+*.xml.*
+*.zip
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
