--- a/src/projects/Flooding/Flooding.config
+++ b/src/projects/Flooding/Flooding.config
@@ -5,12 +5,11 @@ height = 6000
 number_of_threads = 8
 
 log = true
-debug = false
+debug = true
 seed_random = 1587632589
 message_transmission_model = DefaultMessageTransmissionModel
 
 nodes[0] = 1000
-
 
 distribuition_model[0] = RandomDistribution
 communication_radio[0] = 300
